# dicedb-rs

./: Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: rust.yml
benches/: ops.rs
examples/: README.md  getset.rs  getwatch.rs  intro.rs
src/: client.rs  commandrpc.rs  commands.rs  commandstream.rs  errors.rs  lib.rs  rpc.rs  stream.rs  watchrpc.rs  watchstream.rs
