[package]
name = "dicedb-rs"
version = "0.1.0"
edition = "2021"
authors = ["Daniel F. Hauge"]
description = "Rust SDK for DiceDb."
readme = "README.md"
license-file = "LICENSE"
keywords = ["dicedb", "sdk", "rust", "key-value", "database"]
repository = "https://github.com/DanielHauge/dicedb-rs"



[dependencies]
chrono = "0.4.40"
prost = "0.12"
prost-types = "0.12"
tonic = "0.12.3"
uuid = { version = "1.16.0", features = ["v4"] }

[build-dependencies]
tonic-build = "0.12.3"
